--- a/iframe/index.html
+++ b/iframe/index.html
@@ -935,11 +935,9 @@ globalThis.Wave = src => {
 	}
 }
 globalThis.step = null
+globalThis.frame = null
 let nextF = 0
 globalThis.timeToFrame = 0
-</script>
-<script type="module">
-import { frame } from './index.js'
 setInterval(function g(j){
 	if(j) step?.()
 	if(ctxFramerate<0||!gl) return
@@ -968,3 +966,4 @@ requestAnimationFrame(function f(){
 	timeToFrame = performance.now()/1000-t
 })
 </script>
+<script type="module" src="./index.js"></script>
