--- a/iframe/index.html
+++ b/iframe/index.html
@@ -224,13 +224,11 @@ globalThis.pixelRatio = 1
 globalThis.t = performance.now()/1000; globalThis.dt = 0
 let T=document.body
 T.parentElement.style.overflow='hidden'
-T.replaceWith(T=T.firstChild)
+T.append(T=T.firstChild)
 /** @type WebGL2RenderingContext */
 const gl = T.getContext('webgl2', {preserveDrawingBuffer: false, antialias: false, depth: false, premultipliedAlpha: true, stencil: true})
 function glLost(){
 	parent.postMessage(false, '*')
-	gl?.canvas.remove()
-	document.body = document.createElement('body')
 	document.body.textContent = 'WebGL2 context lost :('
 	document.body.style = 'color:white;background:#000;text-align:center;line-height:90vh;font-size:32px;font-family:monospace;'
 }
