--- a/localserver/index.html
+++ b/localserver/index.html
@@ -1,3 +1,5 @@
+<script>
 globalThis.CONFIG = await new Promise(r => addEventListener('message', ({data}) => r(data), {once: true})),
 globalThis.DB = new Level(CONFIG.path)
 await DB.open()
+</script>
