--- a/iframe/index.html
+++ b/iframe/index.html
@@ -11,7 +11,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
 <canvas style="position:fixed;inset:0;width:100%;height:100%;background:#000" width="0" height="0"></canvas>
 <script type="module">
-localStorage.clear();caches.keys().then(a=>a.forEach(c=>caches.delete(c)));indexedDB.databases().then(k=>k.forEach(k=>indexedDB.deleteDatabase(k.name)))
+delete Navigator.prototype.serviceWorker
+delete Navigator.prototype.storage
+delete Navigator.prototype.storageBuckets
+delete window.sharedStorage
+delete localStorage; delete indexedDB; delete caches;
 onerror=(_,a,b,c,d)=>parent.postMessage([''+d,a,b,c], '*')
 onunhandledrejection=({reason})=>parent.postMessage([''+reason,'',0,0], '*')
 Array.prototype.bind = Array.prototype.push
