--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</style>
 </head>
 <body onpointerdown="return!1">
-	<img src="img/icon.png">
+	<img src="/img/icon.png">
 	<div id="a"></div>
 	<span id="b"></span>
 </body>
